app/globals.css
/* ... */
.maplibregl-ctrl-attrib a {
  color: rgba(0, 0, 0, 0.75);
  text-decoration: none;
}

.maplibregl-ctrl-attrib a:hover {
  color: inherit;
  text-decoration: underline;
}

.maplibregl-attrib-empty {
  display: none;
}

.maplibregl-ctrl-scale {
  background-color: hsla(0, 0%, 100%, 0.75);
  border: 2px solid #333;
  border-top: #333;
  box-sizing: border-box;
  color: #333;
  font-size: 10px;
  padding: 0 5px;
}

.maplibregl-popup {
  display: flex;
  left: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  will-change: transform;
}

.maplibregl-popup-anchor-top,
.maplibregl-popup-anchor-top-left,
.maplibregl-popup-anchor-top-right {
  flex-direction: column;
}

.maplibregl-popup-anchor-bottom,
.maplibregl-popup-anchor-bottom-left,
.maplibregl-popup-anchor-bottom-right {
  flex-direction: column-reverse;
}

.maplibregl-popup-anchor-left {
  flex-direction: row;
}

.maplibregl-popup-anchor-right {
  flex-direction: row-reverse;
}

.maplibregl-popup-content {
  pointer-events: auto;
  position: relative;
}

.maplibregl-popup-track-pointer {
  display: none;
}

.maplibregl-popup-track-pointer * {
  pointer-events: none;
  user-select: none;
}

.maplibregl-map:hover .maplibregl-popup-track-pointer {
  display: flex;
}

.maplibregl-map:active .maplibregl-popup-track-pointer {
  display: none;
}

/*

.maplibregl-popup {
  display: flex;
  left: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  will-change: transform
}


.maplibregl-popup-anchor-top,
.maplibregl-popup-anchor-top-left,
.maplibregl-popup-anchor-top-right {
  flex-direction: column
}

.maplibregl-popup-anchor-bottom,
.maplibregl-popup-anchor-bottom-left,
.maplibregl-popup-anchor-bottom-right {
  flex-direction: column-reverse
}

.maplibregl-popup-anchor-left {
  flex-direction: row
}

.maplibregl-popup-anchor-right {
  flex-direction: row-reverse
}

.maplibregl-popup-tip {
  border: 10px solid transparent;
  height: 0;
  width: 0;
  z-index: 1
}

.maplibregl-popup-anchor-top .maplibregl-popup-tip {
  align-self: center;
  border-bottom-color: #fff;
  border-top: none
}

.maplibregl-popup-anchor-top-left .maplibregl-popup-tip {
  align-self: flex-start;
  border-bottom-color: #fff;
  border-left: none;
  border-top: none
}

.maplibregl-popup-anchor-top-right .maplibregl-popup-tip {
  align-self: flex-end;
  border-bottom-color: #fff;
  border-right: none;
  border-top: none
}

.maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
  align-self: center;
  border-bottom: none;
  border-top-color: #fff
}

.maplibregl-popup-anchor-bottom-left .maplibregl-popup-tip {
  align-self: flex-start;
  border-bottom: none;
  border-left: none;
  border-top-color: #fff
}

.maplibregl-popup-anchor-bottom-right .maplibregl-popup-tip {
  align-self: flex-end;
  border-bottom: none;
  border-right: none;
  border-top-color: #fff
}

.maplibregl-popup-anchor-left .maplibregl-popup-tip {
  align-self: center;
  border-left: none;
  border-right-color: #fff
}

.maplibregl-popup-anchor-right .maplibregl-popup-tip {
  align-self: center;
  border-left-color: #fff;
  border-right: none
} */

/* .maplibregl-popup-close-button {
  background-color: transparent;
  border: 0;
  border-radius: 0 3px 0 0;
  cursor: pointer;
  position: absolute;
  right: 0;
  top: 0
}

.maplibregl-popup-close-button:hover {
  background-color: rgb(0 0 0/5%)
} */

/* .maplibregl-popup-content {
  background: #fff;
  border-radius: 3px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
  padding: 15px 10px;
  pointer-events: auto;
  position: relative
} 

.maplibregl-popup-anchor-top-left .maplibregl-popup-content {
  border-top-left-radius: 0
}

.maplibregl-popup-anchor-top-right .maplibregl-popup-content {
  border-top-right-radius: 0
}

.maplibregl-popup-anchor-bottom-left .maplibregl-popup-content {
  border-bottom-left-radius: 0
}

.maplibregl-popup-anchor-bottom-right .maplibregl-popup-content {
  border-bottom-right-radius: 0
}

.maplibregl-popup-track-pointer {
  display: none
}

.maplibregl-popup-track-pointer * {
  pointer-events: none;
  user-select: none
} 
*/

.maplibregl-map:hover .maplibregl-popup-track-pointer {
  display: flex;
}

.maplibregl-map:active .maplibregl-popup-track-pointer {
  display: none;
}

.maplibregl-marker {
  left: 0;
  position: absolute;
  top: 0;
  will-change: transform;
}

.maplibregl-user-location-dot,
.maplibregl-user-location-dot:before {
  background-color: #1da1f2;
  border-radius: 50%;
  height: 15px;
  width: 15px;
  z-index: 999;
}

.maplibregl-user-location-dot:before {
  animation: maplibregl-user-location-dot-pulse 2s infinite;
  content: "";
  position: absolute;
}

.maplibregl-user-location-dot:after {
  border: 2px solid #fff;
  border-radius: 50%;
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.35);
  box-sizing: border-box;
  content: "";
  height: 19px;
  left: -2px;
  position: absolute;
  top: -2px;
  width: 19px;
}

@keyframes maplibregl-user-location-dot-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }

  70% {
    opacity: 0;
    transform: scale(3);
  }

  to {
    opacity: 0;
    transform: scale(1);
  }
}

.maplibregl-user-location-dot-stale {
  background-color: #aaa;
}

.maplibregl-user-location-dot-stale:after {
  display: none;
}

.maplibregl-user-location-accuracy-circle {
  background-color: #1da1f233;
  border-radius: 100%;
  height: 1px;
  width: 1px;
}

.maplibregl-crosshair,
.maplibregl-crosshair .maplibregl-interactive,
.maplibregl-crosshair .maplibregl-interactive:active {
  cursor: crosshair;
}

.maplibregl-boxzoom {
  background: #fff;
  border: 2px dotted #202020;
  height: 0;
  left: 0;
  opacity: 0.5;
  position: absolute;
  top: 0;
  width: 0;
}

.maplibregl-cooperative-gesture-screen {
  align-items: center;
  background: rgba(0, 0, 0, 0.4);
  color: #fff;
  display: flex;
  font-size: 1.4em;
  inset: 0;
  justify-content: center;
  line-height: 1.2;
  opacity: 0;
  padding: 1rem;
  pointer-events: none;
  position: absolute;
  transition: opacity 1s ease 1s;
  z-index: 99999;
}
/* ... */

